# Voxelyze

./: .gitignore  CMakeLists.txt  README.md  move_sample_vxa_for_test.sh  voxelyzeManager
VXA_examples/: Basic--Gen_0000--fit_0.02657770--id_00014.vxa  Basic--Gen_0000--fit_5.78458000--id_00000.vxa  Basic--Gen_0006--fit_5.78479000--id_00096.vxa  Basic--Gen_0009--fit_5.91140000--id_00144.vxa  Basic--Gen_0010--fit_5.99611000--id_00172.vxa  Quadrupeds--Gen_0000--fit_0.02781000--id_00018.vxa  Quadrupeds--Gen_0000--fit_0.15776900--id_00011.vxa  Quadrupeds--Gen_0000--fit_0.17414400--id_00046.vxa  Quadrupeds--Gen_0000--fit_0.18516100--id_00040.vxa  Quadrupeds--Gen_0000--fit_0.19106600--id_00013.vxa  Quadrupeds--Gen_0000--fit_0.23242200--id_00028.vxa  Quadrupeds--Gen_0000--fit_0.23959200--id_00021.vxa  Quadrupeds--Gen_0000--fit_0.28458300--id_00001.vxa  Quadrupeds--Gen_0000--fit_0.29597100--id_00003.vxa  Quadrupeds--Gen_0000--fit_0.31279600--id_00009.vxa  Quadrupeds--Gen_0000--fit_0.31740200--id_00020.vxa  Quadrupeds--Gen_0000--fit_0.32049800--id_00033.vxa  Quadrupeds--Gen_0000--fit_0.37023500--id_00039.vxa  Quadrupeds--Gen_0000--fit_0.38997500--id_00008.vxa  Quadrupeds--Gen_0000--fit_0.40092900--id_00005.vxa  Quadrupeds--Gen_0000--fit_0.44603700--id_00034.vxa  Quadrupeds--Gen_0000--fit_0.45474300--id_00032.vxa  Quadrupeds--Gen_0000--fit_0.56377600--id_00004.vxa  Quadrupeds--Gen_0000--fit_0.58127000--id_00047.vxa  Quadrupeds--Gen_0000--fit_0.62136400--id_00022.vxa  Quadrupeds--Gen_0000--fit_0.63739800--id_00016.vxa  Quadrupeds--Gen_0000--fit_0.67319700--id_00041.vxa  Quadrupeds--Gen_0000--fit_0.67547400--id_00037.vxa  Quadrupeds--Gen_0000--fit_0.70598700--id_00038.vxa  Quadrupeds--Gen_0000--fit_0.71589300--id_00025.vxa  Quadrupeds--Gen_0000--fit_0.78270000--id_00006.vxa  Quadrupeds--Gen_0000--fit_0.79740800--id_00019.vxa  Quadrupeds--Gen_0000--fit_0.83034500--id_00029.vxa  Quadrupeds--Gen_0000--fit_0.86462600--id_00000.vxa  Quadrupeds--Gen_0000--fit_0.86845400--id_00045.vxa  Quadrupeds--Gen_0000--fit_1.14275000--id_00017.vxa  Quadrupeds--Gen_0000--fit_1.21108000--id_00036.vxa  Quadrupeds--Gen_0000--fit_1.27358000--id_00049.vxa  Quadrupeds--Gen_0000--fit_1.43579000--id_00010.vxa  Quadrupeds--Gen_0000--fit_1.94315000--id_00048.vxa  (+19 more)
doc/: Format_of_VXA.txt  Plan.txt  install.md
docker/: Dockerfile  note.md
include/: Array3D.h  VX_Collision.h  VX_Voxel.h  Voxelyze.h
softbotsOutput.xml_examples/: softbotsOutput--id_00010.xml
src/: VX3_Quat3D.h  VX3_Vec3D.h  VX3_Voxel.cu  VX3_Voxel.h  VX_Voxel.cpp  Voxelyze.cpp  Voxelyze3.cu  Voxelyze3.h
src/VX2/: TI_Link.cu  TI_Material.cu  TI_Material.h  TI_MaterialLink.cu  TI_MaterialLink.h  TI_Object.cu  TI_Utils.h  TI_Voxel.cu  TI_Voxel.h  TI_VoxelyzeKernel.cu  TI_VoxelyzeKernel.h  TI_vector.h  TI_vector.h.bak.2
src/VX3/: VX3.h
src/VX3/tools/: VX3_vector.cu  VX3_vector.h
src/VX3/voxelyzeManager/: VX3_MemoryCleaner.cu  VX3_SimulationManager.cu  VX3_SimulationManager.h  VX3_TaskManager.cpp  VX3_TaskManager.cu  VX3_TaskManager.h  VX3_Utils.h  VX3_VoxelyzeKernel.cu  VX3_VoxelyzeKernel.h  main.cpp
test/fidelity/vs.VoxCAD2/: result.VoxCAD2  result.this
test/testCase/: test_VX3_vector.cu
